tests/language_modules/03_import_resolution/fixtures/invalid/imported_module_name_mismatch/App/Main.vf
module App.Main

import Banking.Proofs

procedure main()
is
    check true
end main

end App.Main